v7.2
-----


v7.1
-----
+ Added a box to search pages that lets you hide games you own, on your wishlist, or in cart
+ Added ACRTAG warning messages to sub pages
+ Added the ability to remove games from your wishlist from the game's app page
+ Added a button to toggle the "Write a review for this game" section on app pages
: Fixed drop count calculation to work with new badge page pagination
: Fixed badge page filtering and sort options to work with pagination
: Fixed a bug in market total calculations introduced by a change in the API

v7.0.1
-----
: Fixed an issue where inventory price info was in USD regardless of the user's currency
: Fixed a bug that would cause items to be tagged as gifts incorrectly under certain conditions
: Fixed a bug in regional price comparisons introduced by a change in the API
: Updated the Firefox build to use the latest Addon SDK that is compatible with newest browsers

v7.0
-----
+ Added highlighting and tags back to the Friend Activity page
+ Added a button to easily decline trade offers (even invalid ones)
+ Added an option to show a warning on items where cross region trading has been disabled
+ Added UI elements to continuous scrolling feature and the ability to retry when it fails
+ Enhanced Steam will now show bundle savings calculations on bundles with no savings
: Updated wishlist code to work with the new page layout and design
: Updated Early Access banners to work with more store sections
: Fixed a bug in market total calculations

v6.9
-----
+ Added a "Customize" button the the "All New Releases" section
+ Added option to hide "Items under $10" section on home page
+ Added a "remove" button to the custom background selection dialog
: Fixed a bug with Euro price formatting
: Fixed a bug that caused some packages not to process savings calculations corectly (again)
: Fixed the centering of the home page splash screen if present and the sidebar is disabled
: Fixed several bugs with the home page customization options

v6.8